2004-01-19  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/gate/rfc2ftn.c: fix disable FIDO_STYLE_MSGID
	* src/areafix/areafix.c: fix AF_AVAIL, fix disable
	    AF_AVAIL

2004-01-12  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* doc/examples: fixes

2004-01-09  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* doc/FAQ.ru: update

2003-12-28  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* configure.in: fix warning message

2003-12-07  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/charset/cyrillic.map: update

2003-12-03  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/charset/cyrillic.map: add belarussian(thanks to
	    Serge Serebro)

2003-12-01  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/gate/ftn2rfc.c: fix UseOriginForOrganization
	    (thanks to Anton Leer)
	* package/freebsd: update
	* config.h.in: remove vsprintf(), change to vsnprintf()
	* acconfig.h: remove vsprintf(), change to vsnprintf()
	* src/areafix/areafix.c: remove support vsprintf()
	* src/common/misc.c: remove support vsprintf()
	* src/common/textlist.c: remove support vsprintf()
	* src/common/tmps.c: remove support vsprintf()

2003-11-25  Andrey Slusar <rusfidogate@users.sourceforge.net>

        * src/charset/cyrillic.map: fix cp1125 map(thanks to
            alex help kushnaryov)
        * packages/rpm/fidogate.spec: update
        * src/charset/cyrillic.map: add alias cp1251
        * doc/mailer/sendmail/mailer/ftn.m4.in: restore
        * src/toss/ftntoss.c: edit spyes subject

2003-11-09  Andrey Slusar <rusfidogate@users.sourceforge.net>

	======= Release 5.1.0ds =============================
	------- CVS tag R510 --------------------------------
	------- CVS ci --------------------------------------
	
	* version.h: update version number

2003-11-04  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* source: copy to stable
	* test: remove
	* doc/news/leafnode: remove, move to current